@@ -142,6 +142,8 @@ Summary of important user-visible changes for version 4.2:
     instead will return execution to the MEX function for error
     handling.
 
+ ** Other new MEX API functions include mexEvalStringWithTrap.
+
  ** Other new functions added in 4.2:
 
       audioformats
